# rawToDICOM-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
src/rawtoDICOM/: __init__.py  __main__.py  cli.py  config.py
src/rawtoDICOM/bruker/: __init__.py  params.py  raw.py  reader.py  scan.py
src/rawtoDICOM/dicom/: __init__.py  affine.py  geometry.py  writer.py
src/rawtoDICOM/pipeline/: __init__.py  cine.py  self_gating.py  sort.py
src/rawtoDICOM/reconstruction/: __init__.py  coil_combination.py  compressed_sensing.py  kspace.py
src/rawtoDICOM/reconstruction/self_gating/: __init__.py  navigator.py  peak_finder.py  reader.py  shuffler.py  synchronizer.py
tests/: conftest.py  folders.cache  test_coil_combination.py  test_compressed_sensing.py  test_dicom.py  test_kspace.py  test_pipeline_integration.py  test_reader.py  test_scan.py  test_self_gating.py  visualize_pipeline.py
